second time upload

--- a/src/components/mission/mission.css
+++ b/src/components/mission/mission.css
@@ -1,4 +1,4 @@
-* Inspire Start */
+/* * Inspire Start */
 
 #Inspire {
     padding-top: 128px;
@@ -37,4 +37,4 @@
 }
 
 
-/* Inspire End */
+/* Inspire End */ 
